k8s/node-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app.kubernetes.io/name: node-api
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: node-api
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: auth-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-api
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: auth-app
    spec:
      imagePullSecrets:
        - name: docker-hub-secret # Le nom du Secret créé avec 'kubectl create secret docker-registry'
      containers:
        - name: api
          image: techopsfr/app-vue-nodeapi:26e570c
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /api/user/current # Path de test
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api/user/current # Path de test 
              port: 80
            initialDelaySeconds: 5         
            periodSeconds: 10
