k8s/node-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app.kubernetes.io/name: node-api
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: auth-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: node-api
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: auth-app
