k8s/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer # le nom de l'issuer dans letsencrypt-issuer.yaml
    # Permet le passage SSL directement au backend. Utile lorsque le backend gère le TLS et argo gère le SSL
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # Si vous rencontrez une boucle de redirection ou si vous obtenez un code de réponse 307, vous devez forcer 
    # l'ingress nginx à se connecter au backend en utilisant HTTPS avec backend-protocol :
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"    
    # On restreint les IP sources
    #nginx.ingress.kubernetes.io/whitelist-source-range: "31.36.121.222/32, 174.12.34.0/24"
    nginx.ingress.kubernetes.io/whitelist-source-range: "31.36.121.222/32"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd.techops.ovh
    secretName: argocd-tls-cert 
  rules:
  - host: argocd.techops.ovh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
